--- a/webservice/src/main/webapp/adminPage/adminPage.html
+++ b/webservice/src/main/webapp/adminPage/adminPage.html
@@ -23,7 +23,7 @@
 
         <div id="menu">
             <div class="option" onclick="location.href = 'http://192.168.1.7:8081/wbd/mainPage/mainPage.html';">Produkty</div>
-            <div class="option">Dodaj Produkt</div>
+            <div class="option" onclick="location.href = 'http://192.168.1.7:8081/wbd/addPage/addPage.html';">Dodaj Produkt</div>
             <div class="option">Kontakt</div>
             <div class="option">Regulamin</div>
             <div style="clear:both"></div>
