--- a/webservice/src/main/webapp/card/card.html
+++ b/webservice/src/main/webapp/card/card.html
@@ -24,6 +24,7 @@
             <div class="option">O nas</div>
             <div class="option">Kontakt</div>
             <div class="option">Regulamin</div>
+            <div class="option" onclick="location.href = 'http://192.168.1.7:8081/wbd/ordersPage/orders.html';">Moje Zamówienia</div>
             <div style="clear:both"></div>
         </div>
 
@@ -36,12 +37,7 @@
 
 
         <div id="content">
-                <div class="product">
-                    <div class="image"><img src="image.jpg"></div>
-                    <div class="name">Fajny produkt</div>
-                    <div class="price">300zł</div>
-                    <div class="delete"><img src="delete.png"></div>
-                </div>
+            <div style="clear:both"></div>
         </div>
 
         <div id="footer">
